# Coursework_project_1

./: .env_template  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  user_settings.json
data/: operations.xlsx  operations_21_24.xlsx
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
